MATP-1102 Update some issues with the FIX session view